samples/_failures_safe/1761335452_fc309b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0c1ce152.c: In function ‘main’:
./samples/SAFE/__tmp_0c1ce152.c:155:5: error: expected expression at end of input
  155 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_0c1ce152.c:155:5: error: expected declaration or statement at end of input
